fix: header spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -38,3 +38,7 @@ a {
   width: 100%;
   overflow: auto;
 }
+
+.layout-header {
+  padding: 16px 0;
+}
